export const snapshot = {};

snapshot[`array 1`] = `
{
  items: {
    type: "string",
  },
  type: "array",
}
`;

snapshot[`array 2`] = `
{
  description: "One.",
  items: {
    type: "string",
  },
  type: "array",
}
`;

snapshot[`array 3`] = `
{
  description: "One. Two.",
  items: {
    type: "string",
  },
  type: "array",
}
`;
